--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Personal Website</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Aswinchandran1/portfolio_website'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Aswinchandran1/Portfolio-website'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://aswinchandran1.github.io/portfolio_website/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://aswinchandran1.github.io/Portfolio-website/'">
                             Live Demo
                         </button>
                     </div>
