last changes are updated

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="section_text">
             <p class="section__text__p1">Hello,I'm</p>
             <h1 class="title">Aswin Chandran</h1>
-            <p class="section__text__p2">Web Developer</p>
+            <p class="section__text__p2">Student</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('images/CLOUD CLG (MOD 1).pdf')">Download
                     CV</button>
